--- a/src/Page/Dashboard.css
+++ b/src/Page/Dashboard.css
@@ -1,12 +1,12 @@
 body {
-   background-color: #333;
+   background-color: #8B322C;
    margin: 0;
    font-family: Arial, sans-serif;
 }
 
 .chat-container {
    border-radius: 10px;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+   box-shadow: 0 4px 8px #4793AF;
    display: flex;
    flex-direction: column;
    height: auto;
@@ -36,7 +36,7 @@ body {
 }
 
 .user-message .message-content {
-   background-color: #616161;
+   background-color: #DD5746;
    color: #fff;
    border-radius: 10px 10px 0 10px;
    padding: 10px 15px;
@@ -49,8 +49,8 @@ body {
 }
 
 .ai-message .message-content {
-   background-color: #616161;
-   color: #fff;
+   background-color: #FFC470;
+   color: #fffF;
    border-radius: 10px 10px 10px 0;
    padding: 10px 15px;
    max-width: 80%;
@@ -60,10 +60,10 @@ body {
 .input-container {
    display: flex;
    padding: 10px;
-   background-color: #696868;
+   background-color: #4793AF;
    border-radius: 20px 20px 0 0px;
    width: 100%;
-   border-top: 5px solid #aa7e05;
+   /* border-top: 5px solid #8B322C; */
 }
 
 .chat-input {
@@ -72,7 +72,7 @@ body {
    border: none;
    border-radius: 20px;
    margin-right: 10px;
-   background-color: #696868;
+   background-color: #4793AF;
    color: white;
 }
 
