--- a/src/Page/Dashboard.css
+++ b/src/Page/Dashboard.css
@@ -80,11 +80,11 @@ body {
    padding: 10px 20px;
    border: none;
    border-radius: 20px;
-   background-color: #333;
+   background-color: #8B322C;
    color: white;
    cursor: pointer;
 }
 
 .send-button:hover {
-   background-color: #0056b3;
+   background-color: #DD5746;
 }
