--- a/src/Page/Dashboard.css
+++ b/src/Page/Dashboard.css
@@ -63,7 +63,7 @@ body {
    background-color: #4793AF;
    border-radius: 20px 20px 0 0px;
    width: 100%;
-   /* border-top: 5px solid #8B322C; */
+   border-top: 5px solid #DD5746;
 }
 
 .chat-input {
@@ -72,7 +72,7 @@ body {
    border: none;
    border-radius: 20px;
    margin-right: 10px;
-   background-color: #4793AF;
+   background-color: #fff;
    color: white;
 }
 
